--- a/.github/workflows/build-docker-file.yaml
+++ b/.github/workflows/build-docker-file.yaml
@@ -21,5 +21,5 @@ jobs:
     - name: Build Docker File
       run: | 
         docker build . --progress plain --no-cache -t github-merged-branch-remover
-        docker run -e ${{ secrets.TOKEN }} github-merged-branch-remover
+        docker run -e github-merged-branch-remover tarakaprabhuchinta azure-infra-flux-apps ${{ secrets.TOKEN }}
       
